<resources>
    <string name="app_name">TechnicalAssistant</string>
    <string name="math">Математика</string>
    <string name="phys">Физика</string>
    <string name="info">Информатика</string>
    <string name="test">Тесты</string>
    <string name="theor">Логарифмы</string>
    <string name="theor2">Графики функции</string>
    <string name="sqrt">Корень и степень числа</string>
    <string name="uravnenie">Решение квадратного уравнения</string>
    <string name="resh">Решение задач</string>
    <string name="theor3">Теория</string>
    <string name="per">Перевод в различные системы счисления</string>
    <string name="text1">Введите число</string>
    <string name="_2">2</string>
    <string name="text2">Введите нужную степень</string>
    <string name="infostep">Степень возведения</string>
    <string name="infostep0">Возведение числа в нужную степень</string>
    <string name="button1">Результат</string>
    <string name="button2">Результат</string>
    <string name="infostep1">Извлечь корень из числа</string>
    <string name="infostep3">Результат:</string>
    <string name="koren">Корень:</string>
    <string name="step">Возведение в степень:</string>
    <string name="infourav">Квадратное уравнение ax²+xb+c = 0</string>
    <string name="infourav1">Линейное уравнение kx+b = c</string>
    <string name="textur">Введите a</string>
    <string name="textur1">Введите b</string>
    <string name="textur2">Введите c</string>
    <string name="textur3">Введите k</string>
    <string name="textur4">Введите b</string>
    <string name="textkv">Первый корень:</string>
    <string name="textkv1">Второй корень:</string>
    <string name="infosys" />
    <string name="infosystem">Его система счисления:</string>
    <string name="infosystem1">Перевести в:</string>
    <string name="infosystem3">Результат</string>
    <string name="textsys">Введите число</string>
    <string name="dey">Действия между числами в различных системах счисления</string>
    <string name="infonumb1">Введите первое число</string>
    <string name="infonumbsys2">Введите второе число</string>
    <string name="deyinf">Действие:</string>
    <string name="infolog">Нахождение логарифма</string>
    <string name="inp">Введите нужное основание</string>
    <string name="Log">Логарифм:</string>
    <string name="mechanica">Механика</string>
    <string name="molec">Молекулярная физика и основы термодинамики</string>
    <string name="electrodin">Электродинамика</string>
    <string name="volnykoleb">Колебания и волны</string>
    <string name="optic">Оптика</string>
    <string name="about">About</string>
    <string name="vid">Выберите вид графика:</string>
    <string name="razdel">Выберите раздел:</string>
    <string name="dalee">Далее</string>
    <string name="dannye">Введите данные:</string>
    <string name="_0">0</string>
    <string name="schit">Считалочка</string>
    <string name="_9">9</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="_3">3</string>
    <string name="enter">Ввести</string>
    <string name="time">Время: 60</string>
    <string name="minus">-</string>
    <string name="popyt">Попытки: 3</string>
    <string name="schet">Счет: 0</string>
    <string name="_0_0">0 + 0 =</string>
    <string name="_8">8</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_7">7</string>
    <string name="c">C</string>
</resources>
