<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#edecec"
    android:orientation="vertical"
    android:theme="@android:style/Theme.Holo.Light"
    tools:context="iktaniyalol.ru.technicalassistant.interfaces.SchitGame">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/timer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="#edecec"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/time"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/popyt"
            android:layout_width="20dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="#edecec"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/popyt"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/score"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="#edecec"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/schet"
            android:textColor="@android:color/holo_blue_light"
            android:textSize="20sp"
            android:textStyle="bold|italic" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/question"
            android:layout_width="85dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:background="#edecec"
            android:gravity="right|center"
            android:padding="5dp"
            android:text="@string/_0_0"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/answer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:background="#edecec"
            android:gravity="center|left"
            android:padding="5dp"
            android:text="?"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/cancel"
            style="@android:style/ButtonBar"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@drawable/num_back"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/c"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/seven"
            style="@android:style/ButtonBar"
            android:background="@drawable/num_back"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="5dp"
            android:tag="7"
            android:text="@string/_7"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/eight"
            style="@android:style/ButtonBar"
            android:background="@drawable/num_back"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="5dp"
            android:tag="8"
            android:text="@string/_8"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/nine"
            style="@android:style/ButtonBar"
            android:background="@drawable/num_back"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="5dp"
            android:tag="9"
            android:text="@string/_9"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/four"
            style="@android:style/ButtonBar"
            android:background="@drawable/num_back"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="5dp"
            android:tag="4"
            android:text="@string/_4"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/five"
            style="@android:style/ButtonBar"
            android:background="@drawable/num_back"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="5dp"
            android:tag="5"
            android:text="@string/_5"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/six"
            style="@android:style/ButtonBar"
            android:background="@drawable/num_back"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="5dp"
            android:tag="6"
            android:text="@string/_6"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/one"
            style="@android:style/ButtonBar"
            android:background="@drawable/num_back"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="5dp"
            android:tag="1"
            android:text="@string/_1"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/two"
            style="@android:style/ButtonBar"
            android:background="@drawable/num_back"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="5dp"
            android:tag="2"
            android:text="@string/_2"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/three"
            style="@android:style/ButtonBar"
            android:background="@drawable/num_back"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="5dp"
            android:tag="3"
            android:text="@string/_3"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/zero"
            style="@android:style/ButtonBar"
            android:background="@drawable/num_back"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="5dp"
            android:tag="0"
            android:text="@string/_0"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/minus"
            style="@android:style/ButtonBar"
            android:background="@drawable/num_back"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="5dp"
            android:tag="-"
            android:text="@string/minus"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/enter"
            style="@android:style/ButtonBar"
            android:background="@drawable/num_back"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="5dp"
            android:tag="enter"
            android:text="@string/enter"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>