<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/korenstep"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#edecec"
    tools:context="iktaniyalol.ru.technicalassistant.interfaces.KorenStepen">

    <EditText
        android:id="@+id/input2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/input3"
        android:layout_marginTop="10dp"
        android:ems="20"
        android:hint="@string/text2"
        android:inputType="numberDecimal|numberSigned"
        android:text="@string/_2"
        android:textColor="@android:color/black"
        android:textColorHighlight="@android:color/darker_gray"
        android:textColorHint="@android:color/black"
        android:textColorLink="@android:color/darker_gray" />

    <EditText
        android:id="@+id/input3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:layout_marginTop="20dp"
        android:ems="20"
        android:hint="@string/text1"
        android:inputType="numberDecimal|numberSigned"
        android:labelFor="@+id/input1"
        android:textColorHighlight="@android:color/darker_gray"
        android:textColorHint="@android:color/black"
        android:textColorLink="@android:color/darker_gray" />

    <TextView
        android:id="@+id/textView4"
        style="@android:style/Widget.Holo.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/input2"
        android:layout_marginStart="14dp"
        android:width="1000dp"
        android:height="30dp"
        android:text="@string/infostep1"
        android:textColor="@android:color/holo_blue_light"
        android:textStyle="bold"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/input1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/input"
        android:layout_marginTop="10dp"
        android:ems="20"
        android:hint="@string/text2"
        android:inputType="numberDecimal|numberSigned"
        android:text="@string/_2"
        android:textColor="@android:color/black"
        android:textColorHighlight="@android:color/darker_gray"
        android:textColorHint="@android:color/black"
        android:textColorLink="@android:color/darker_gray" />

    <EditText
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="20dp"
        android:ems="20"
        android:hint="@string/text1"
        android:inputType="numberDecimal|numberSigned"
        android:labelFor="@+id/input1"
        android:textColorHighlight="@android:color/darker_gray"
        android:textColorHint="@android:color/black"
        android:textColorLink="@android:color/darker_gray" />

    <TextView
        android:id="@+id/textView"
        style="@android:style/Widget.Holo.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView4"
        android:width="1000dp"
        android:height="60dp"
        android:text="@string/infostep0"
        android:textColor="@android:color/holo_blue_light"
        android:textStyle="bold"
        android:textSize="24sp" />

    <Button
        android:id="@+id/resultkr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/button2"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView4"
        android:layout_below="@+id/resultkr"
        android:layout_marginTop="14dp"
        android:width="200dp"
        android:text="@string/step"
        android:textColor="@android:color/holo_blue_light"
        android:textStyle="bold"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView6"
        android:layout_below="@+id/textView6"
        android:layout_marginTop="16dp"
        android:width="70dp"
        android:text="@string/koren"
        android:textColor="@android:color/holo_blue_light"
        android:textStyle="bold"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/resultkr2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView6"
        android:layout_alignBottom="@+id/textView6"
        android:layout_marginStart="14dp"
        android:layout_toEndOf="@+id/textView6"
        android:text="0"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/resultkr1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView7"
        android:layout_alignBottom="@+id/textView7"
        android:layout_marginStart="15dp"
        android:layout_toEndOf="@+id/textView7"
        android:text="0"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

</RelativeLayout>